# void

./: .gitignore  MIGRATION-GUIDE.md  QUICK-INSTALL.md  README.md  docker-compose.yml  voidnet-run
.sisyphus/: ralph-loop.local.md
cli/: capsule-create.py  void.sh
overseer/: Dockerfile  install-web.sh  install.sh  main.py  overseer.service  requirements.txt
uplink/: Dockerfile  install-web.sh  install.sh  main.py  requirements.txt  uplink.service  uplink.service.template
voidnet/: README.md  __init__.py  api.py  cli.py  config.py  install-client-venv.sh  install.sh  pyproject.toml  service.py  setup.py  voidnet-bash.sh
voidnet/commands/: __init__.py  capsule.py  satellite.py  system.py
voidnet/uplink/: main.py
voidnet/utils/: __init__.py  logging.py  platform.py
voidnet/voidnet.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
